tests/paczka1/small_fuzzy/46047887.err
Error in line 10: S650 S631 18,1
Error in line 8: BRYs8gFcd S631 116,2
